--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 		<div class="row">
 		<form class="form-horizontal" style="width: 100%;">
 		<div class="form-group">
-			<input type="text" class="form-control" placeholder="in" id="in-str-url-reg" value="rtmp://wowza.istweb.tv/dp/logosuz"></input>
+			<input type="text" class="form-control" placeholder="in" id="in-str-url-reg" value="rtmp://wowza.istweb.tv/dp/sosyalmedya"></input>
 		</div>
 		<div class="form-group">
 			<input type="text" class="form-control" placeholder="KEY" id="out-str-url-reg"></input>
